--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy:dev": "npm run build:dev && npx firebase use levante-admin-dev && npx firebase deploy --only hosting --config firebase.json",
     "deploy:dev:preview": "bash scripts/deploy-preview-dev.sh",
     "deploy:prod": "npm run build:prod && npx firebase use levante-admin-prod && npx firebase deploy --only hosting --config firebase.json",
+    "deploy:functions:dev": "npx firebase deploy --only functions --project hs-levante-admin-dev --config firebase.json",
     "cypress:open": "cypress open",
     "cypress:locales:emulator": "E2E_USE_ENV=TRUE E2E_BASE_URL=http://localhost:5173/signin E2E_TEST_EMAIL=student@levante.test E2E_TEST_PASSWORD=student123 npx cypress run --e2e --spec cypress/e2e/locales-emulator.cy.ts",
     "e2e:locales:emulator": "E2E_SEED=FALSE bash scripts/e2e-locales-emulator.sh",
