--- a/.gitignore
+++ b/.gitignore
@@ -46,11 +46,6 @@ coverage
 .cursor/mcp.json
 .cursor/rules/.env
 
-# TestSprite (contains transient secrets during local runs)
-testsprite_tests/tmp/config.json
-testsprite_tests/tmp/test_results.json
-testsprite_tests/tmp/raw_report.md
-
 # Sentry Config File
 .env.sentry-build-plugin
 
@@ -58,6 +53,10 @@ cypress/screenshots
 cypress/videos
 cypress/downloads
 cypress/tmp
+
+# Bug test artifacts (generated locally)
+bug-tests/issues.*.json
+bug-tests/*.txt
 
 # Intl Hash
 .cache
