--- a/.github/workflows/e2e-remote-runner.yml
+++ b/.github/workflows/e2e-remote-runner.yml
@@ -7,10 +7,6 @@ on:
         description: Catalog spec id (allowlisted)
         required: true
         type: string
-      specPath:
-        description: Optional spec path override (must be within cypress/e2e/researchers)
-        required: false
-        type: string
       baseUrl:
         description: Target baseUrl to run against
         required: true
@@ -41,11 +37,30 @@ jobs:
 
       - name: Resolve spec path
         id: spec
+        shell: bash
         run: |
-          node scripts/e2e-remote/resolve-spec.mjs
-        env:
-          SPEC_ID: ${{ inputs.specId }}
-          SPEC_PATH: ${{ inputs.specPath }}
+          set -euo pipefail
+          SPEC_ID="${{ inputs.specId }}"
+          case "$SPEC_ID" in
+            gh-0737-open) SPEC="cypress/e2e/researchers/bugs/gh-0737-open.cy.ts" ;;
+            gh-0733-open) SPEC="cypress/e2e/researchers/bugs/gh-0733-open.cy.ts" ;;
+            gh-0735-open) SPEC="cypress/e2e/researchers/bugs/gh-0735-open.cy.ts" ;;
+            gh-0766-open) SPEC="cypress/e2e/researchers/bugs/gh-0766-open.cy.ts" ;;
+            gh-0719-closed) SPEC="cypress/e2e/researchers/bugs/gh-0719-closed.cy.ts" ;;
+            task-add-group) SPEC="cypress/e2e/researchers/tasks/add-group.cy.ts" ;;
+            task-administrator-login) SPEC="cypress/e2e/researchers/tasks/administrator-login.cy.ts" ;;
+            task-assignment-task-conditions) SPEC="cypress/e2e/researchers/tasks/assignment-task-conditions.cy.ts" ;;
+            task-monitor-completion) SPEC="cypress/e2e/researchers/tasks/monitor-completion.cy.ts" ;;
+            task-researcher-full-workflow) SPEC="cypress/e2e/researchers/tasks/researcher-full-workflow.cy.ts" ;;
+            task-researcher-docs-website) SPEC="cypress/e2e/researchers/tasks/researcher-docs-website.cy.ts" ;;
+            task-researcher-docs-scenario) SPEC="cypress/e2e/researchers/tasks/researcher-docs-scenario.cy.ts" ;;
+            task-researcher-docs-site-admin-school-class-add-users) SPEC="cypress/e2e/researchers/tasks/researcher-docs-site-admin-school-class-add-users.cy.ts" ;;
+            *)
+              echo "Unknown/blocked specId: $SPEC_ID"
+              exit 2
+              ;;
+          esac
+          echo "spec=$SPEC" >> "$GITHUB_OUTPUT"
 
       - name: Run Cypress
         id: cypress
