--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "@bdelab/roar-swr": "1.12.11",
     "@bdelab/roar-utils": "^1.2.1",
     "@levante-framework/core-tasks": "^1.0.19",
-    "@levante-framework/levante-zod": "^1.0.6",
     "@levante-framework/firekit": "^9.3.13",
+    "@levante-framework/levante-zod": "^1.0.6",
     "@levante-framework/permissions-core": "^1.1.0",
     "@primevue/core": "^4.2.4",
     "@primevue/themes": "^4.2.4",
@@ -65,6 +65,7 @@
     "date-fns": "^4.1.0",
     "dompurify": "^3.1.6",
     "dotenv": "^16.3.1",
+    "firebase": "^12.9.0",
     "flag-icons": "^7.5.0",
     "html2canvas": "^1.4.1",
     "http-status-codes": "^2.3.0",
